namespace Manager
{
    public enum AgentState
    {
        Idle,
        Move,
        Collapse,
        Die
    }
}