namespace Manager
{
    public enum GameState
    {
        Home,
        Start,
        Play,
        Result,
        Pause
    }
}